--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,9 +11,23 @@
         <input type="email" id="email" name="email" required>
         <br><br>
         <label for="password">Mot de passe :</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" placeholder="Mot de passe" required>
+        <input type="checkbox" id="showPassword"> Voir le mot de passe
         <br><br>
         <button type="submit">Se connecter</button>
     </form>
+<script>
+  const passwordInput = document.getElementById('password');
+  const showPassword = document.getElementById('showPassword');
+
+  showPassword.addEventListener('change', function() {
+    if (this.checked) {
+      passwordInput.type = 'text';
+    } else {
+      passwordInput.type = 'password';
+    }
+  });
+</script>
+
 </body>
 </html>
