--- a/views/editReservations.ejs
+++ b/views/editReservations.ejs
@@ -1,30 +1,85 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modification d'une réservation</title>
+  <meta charset="UTF-8">
+  <title>Modifier une réservation</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
-    <h2>Modifier une réservation</h2>
-<form action="/reservations/<%= reservation._id %>/edit" method="POST">
-  <label>Catway Number:</label>
-  <input type="number" name="catwayNumber" value="<%= reservation.catwayNumber %>" required>
-  
-  <label>Client Name:</label>
-  <input type="text" name="clientName" value="<%= reservation.clientName %>" required>
-  
-  <label>Boat Name:</label>
-  <input type="text" name="boatName" value="<%= reservation.boatName %>" required>
-  
-  <label>Start Date:</label>
-  <input type="date" name="startDate" value="<%= reservation.startDate.toISOString().slice(0,10) %>" required>
-  
-  <label>End Date:</label>
-  <input type="date" name="endDate" value="<%= reservation.endDate.toISOString().slice(0,10) %>" required>
 
-  <button type="submit">Enregistrer</button>
-</form>
+<body>
+
+  <h1>Modification d'une réservation</h1>
+
+  <form action="/reservations/<%= reservation._id %>/edit" method="POST">
+    <table>
+      <tbody>
+        <tr>
+          <th>Catway</th>
+          <td>
+            <input
+              type="number"
+              name="catwayNumber"
+              value="<%= reservation.catwayNumber %>"
+              required
+            >
+          </td>
+        </tr>
+
+        <tr>
+          <th>Client</th>
+          <td>
+            <input
+              type="text"
+              name="clientName"
+              value="<%= reservation.clientName %>"
+              required
+            >
+          </td>
+        </tr>
+
+        <tr>
+          <th>Bateau</th>
+          <td>
+            <input
+              type="text"
+              name="boatName"
+              value="<%= reservation.boatName %>"
+              required
+            >
+          </td>
+        </tr>
+
+        <tr>
+          <th>Date de début</th>
+          <td>
+            <input
+              type="date"
+              name="startDate"
+              value="<%= reservation.startDate.toISOString().slice(0,10) %>"
+              required
+            >
+          </td>
+        </tr>
+
+        <tr>
+          <th>Date de fin</th>
+          <td>
+            <input
+              type="date"
+              name="endDate"
+              value="<%= reservation.endDate.toISOString().slice(0,10) %>"
+              required
+            >
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <button type="submit">Enregistrer les modifications</button>
+      <a href="/dashboard">
+    <button type="button">Annuler</button>
+    </a>
+  </form>
 
 </body>
 </html>
