modif routes-views add newuser

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1>Bonjour <%= username %>, bienvenue sur le tableau de bord !</h1>
+  <h1>Bonjour <%= user.username %>, bienvenue sur le tableau de bord !</h1>
 
   <h2>Mes informations</h2>
   <p>Nom : <%= user.username %></p>
