--- a/views/editUser.ejs
+++ b/views/editUser.ejs
@@ -6,7 +6,15 @@
   <title>Modifier mon profil</title>
 </head>
 <body>
-  <h1>Modifier mon profil</h1>
+   <header class="header-hero">
+    <div class="header-overlay">
+      <h1>Port de Russell</h1>
+      <p>Bienvenue sur la page du port de Russell</p>
+    </div>
+  </header>
+  
+  <main>
+    <h1>Modifier mon profil</h1>
 
   <form action="/dashboard/user/edit" method="POST">
     <label for="username">Nom :</label>
@@ -22,5 +30,7 @@
     <a href="/dashboard">
     <button type="button">Annuler</button>
     </a>
+  </main>
+  
 </body>
 </html>
