--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,7 @@
   <title>Port de Russell</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
   <header class="header-hero">
     <div class="header-overlay">
@@ -12,7 +13,7 @@
       <p>Bienvenue sur la page du port de Russell</p>
       <div class="header-buttons">
         <a class="btn" href="/login">Se connecter</a>
-        <a class="btn" href="/register">Créer un compte</a>
+        <a class="btn" href="/signup">Créer un compte</a>
       </div>
     </div>
   </header>
