--- a/views/catways.ejs
+++ b/views/catways.ejs
@@ -5,7 +5,15 @@
   <title>Liste des Catways</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
+  <header class="header-hero">
+    <div class="header-overlay">
+      <h1>Port de Russell</h1>
+      <p>Bienvenue sur la page du port de Russell</p>
+    </div>
+  </header>
+
   <h1>Catways</h1>
   <table>
     <thead>
