--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,15 @@
   <link rel="stylesheet" href="/css/style.css">
   <title>Connexion</title>
 </head>
+
 <body>
+<header class="header-hero">
+    <div class="header-overlay">
+      <h1>Port de Russell</h1>
+      <p>Bienvenue sur la page du port de Russell</p>
+    </div>
+  </header>
+
   <h1>Port de Russell – Connexion / Inscription</h1>
   <section>
     <h2>Se connecter</h2>
@@ -22,27 +30,6 @@
       <button type="submit">Se connecter</button>
     </form>
   </section>
-
-  <hr>
-
-  <!-- Formulaire Signup -->
-  <section>
-    <h2>Créer un compte</h2>
-    <% if (signupError) { %>
-      <p style="color :red;"><%= signupError %></p>
-    <% } %>
-    <form action="/signup" method="POST">
-      <label>Nom d'utilisateur:</label>
-      <input type="text" name="username" required>
-      <br>
-      <label>Email:</label>
-      <input type="email" name="email" required>
-      <br>
-      <label>Mot de passe:</label>
-      <input type="password" name="password" required minlength="7">
-      <br>
-      <button type="submit">Créer un compte</button>
-    </form>
-  </section>
+ 
 </body>
 </html>
