--- a/views/reservations.ejs
+++ b/views/reservations.ejs
@@ -5,8 +5,18 @@
   <title>Réservations</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-  <h1>Liste des Réservations</h1>
+
+   <header class="header-hero">
+    <div class="header-overlay">
+      <h1>Port de Russell</h1>
+      <p>Bienvenue sur la page du port de Russell</p>
+    </div>
+  </header>
+  
+  <main>
+    <h1>Liste des Réservations</h1>
   <table>
     <thead>
       <tr>
@@ -29,5 +39,8 @@
       <% }) %>
     </tbody>
   </table>
+
+  </main>
+  
 </body>
 </html>
