--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,10 +5,17 @@
   <link rel="stylesheet" href="/css/style.css">
   <title>Inscription</title>
 </head>
+
 <body>
+  <header class="header-hero">
+    <div class="header-overlay">
+      <h1>Port de Russell</h1>
+      <p>Bienvenue sur la page du port de Russell</p>
+    </div>
+  </header>
   
-  <section>
-    <h2>Créer un compte</h2>
+  <main>
+     <h2>Créer un compte</h2>
     <% if (signupError) { %>
       <p style="color :red;"><%= signupError %></p>
     <% } %>
@@ -24,6 +31,7 @@
       <br>
       <button type="submit">Créer un compte</button>
     </form>
-  </section>
+  </main>
+   
 </body>
 </html>
