modif fianl with jsondoc

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -90,6 +90,12 @@
     </tbody>
   </table>
   </section>
- 
+ <section>
+   <h2>Documentation API</h2>
+   <ul>
+      <li><a href="/routes/api.route.cat.js" target="_blank"><button>Docu Catways</button></a></li>
+      <li><a href="/routes/api.route.resa.js" target="_blank"><button>Docu Réservations</button></a></li>
+    </ul>
+ </section>
 </body>
 </html>
