--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
     </div>
   </header>
 
-  <h1>Port de Russell – Connexion / Inscription</h1>
+  <h1>Port de Russell – Connexion</h1>
   <section>
     <h2>Se connecter</h2>
     <% if (loginError) { %>
